# minipascal_compiler

./: CMakeLists.txt  README.md  编译原理实验检查点.ods  编译原理实验检查点.xls
src/: AST.cpp  AST.h  basic.cpp  basic.h  boolExpression.cpp  boolExpression.h  expressionHandle.cpp  judge.cpp  main.cpp
